--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
         <h5 class="index-headline featured"><span>Comments</span></h5>
         <amp-iframe width=600 height=140
             layout="responsive"
-            sandbox="allow-scripts allow-modals"
+            sandbox="allow-scripts allow-same-origin allow-modals"
             resizable
             src="https://castrovalley.github.io/disqus.html">
           <div overflow class="overflow" tabindex=0 role=button aria-label="Read more">Click to view comments</div>
