use glitch-based disqus-amp-iframe

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals"
             resizable
-            src="https://webrender.net/cv_disqus/#{{page.title}}">
+            src="https://cv-disqus.glitch.me/#{{page.title}}">
           <div overflow class="overflow" tabindex=0 role=button aria-label="Read more">Click to view comments</div>
         </amp-iframe>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
